--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,12 @@
   .appContainer{
     height: 100%;
     display:flex;
+  },
+  
+  .listContainer{
+    height: 100%;
+    display:grid;
   }
-
-
+  
 }
 
